cmake_minimum_required(VERSION 2.6)
set(VOLATILESTREAM_VERSION_STRING 0.0.1)
set(VOLATILESTREAM_VERSION_MAJOR 0)
add_definitions(-D_GNU_SOURCE)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
set(HEADERS_INSTALL_PATH ${CMAKE_INSTALL_PREFIX}/include)
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

set(VOLATILESTREAM_SOURCES volatilestream.c)
add_library(volatilestream SHARED ${VOLATILESTREAM_SOURCES})

set_target_properties(volatilestream PROPERTIES VERSION ${VOLATILESTREAM_VERSION_STRING}
        SOVERSION ${VOLATILESTREAM_VERSION_MAJOR})

install(TARGETS volatilestream LIBRARY DESTINATION lib)
install(FILES volatilestream.h DESTINATION ${HEADERS_INSTALL_PATH})
